<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.purchase.screens.PurchaseActivity">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/icn_back"
            app:layout_constraintBottom_toTopOf="@id/sv_gift"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:src="@drawable/icn_search"
            app:layout_constraintBottom_toBottomOf="@id/btn_heart"
            app:layout_constraintEnd_toStartOf="@id/btn_heart"
            app:layout_constraintTop_toTopOf="@id/btn_heart" />

        <ImageView
            android:id="@+id/btn_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginEnd="22dp"
            android:src="@drawable/icn_heart_inactive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/sv_gift"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/cl_btn_next"
            app:layout_constraintTop_toBottomOf="@id/btn_back">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_scrollview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="33dp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/img_coffee_aos" />

                <TextView
                    android:id="@+id/tv_brand"
                    style="@style/AndroidBrandMedium12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/grey_400"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_product"
                    tools:text="메가MGC커피" />

                <ImageView
                    android:id="@+id/iv_chevron_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:src="@drawable/icn_chevron_right_s"
                    app:layout_constraintBottom_toBottomOf="@id/tv_brand"
                    app:layout_constraintStart_toEndOf="@id/tv_brand"
                    app:layout_constraintTop_toTopOf="@id/tv_brand" />

                <TextView
                    android:id="@+id/tv_item_name"
                    style="@style/AndroidItemNameMedium16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/grey_500"
                    app:layout_constraintStart_toStartOf="@id/tv_brand"
                    app:layout_constraintTop_toBottomOf="@id/tv_brand"
                    tools:text="(ICE)아메리카노" />

                <TextView
                    android:id="@+id/tv_item_price"
                    style="@style/AndroidPriceBold20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textColor="@color/grey_500"
                    app:layout_constraintStart_toStartOf="@id/tv_brand"
                    app:layout_constraintTop_toBottomOf="@id/tv_item_name"
                    tools:text="2,000원" />

                <ImageView
                    android:id="@+id/iv_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="42dp"
                    android:src="@drawable/icn_point"
                    app:layout_constraintStart_toStartOf="@id/tv_brand"
                    app:layout_constraintTop_toBottomOf="@id/tv_item_price" />

                <TextView
                    android:id="@+id/tv_cashback"
                    style="@style/AndroidPoint500Medium14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/purchase_cashback_3percent"
                    android:textColor="@color/toss_gray_point"
                    app:layout_constraintBottom_toBottomOf="@id/iv_point"
                    app:layout_constraintStart_toEndOf="@id/iv_point"
                    app:layout_constraintTop_toTopOf="@id/iv_point"
                    tools:text="3% 캐시백드려요" />

                <TextView
                    android:id="@+id/tv_point"
                    style="@style/AndroidPointBold14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="22dp"
                    android:textColor="@color/blue"
                    app:layout_constraintBottom_toBottomOf="@id/iv_point"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/iv_point"
                    tools:text="60원" />

                <ImageView
                    android:id="@+id/iv_line1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="23dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/rectangle_grey_200_1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_point" />

                <ImageView
                    android:id="@+id/iv_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="19dp"
                    android:src="@drawable/icn_check"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_line1" />

                <TextView
                    android:id="@+id/tv_policy_terms"
                    style="@style/AndroidPolicyTermsMedium12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/purchase_policy_terms"
                    android:textColor="@color/grey_400"
                    app:layout_constraintBottom_toBottomOf="@id/iv_check"
                    app:layout_constraintStart_toEndOf="@id/iv_check"
                    app:layout_constraintTop_toTopOf="@id/iv_check" />

                <ImageView
                    android:id="@+id/iv_line2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/rectangle_grey_100_14dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_check" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tl_tablayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/iv_line2"
                    app:tabIndicatorColor="@color/black"
                    app:tabRippleColor="@android:color/transparent"
                    app:tabSelectedTextColor="@color/black"
                    app:tabTextAppearance="@style/AndroidPointBold14"
                    app:tabTextColor="@color/grey_scale_font_99" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vp_viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toBottomOf="@id/tl_tablayout" />

                <ImageView
                    android:id="@+id/iv_line3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/rectangle_grey_100_14dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/vp_viewpager" />

                <TextView
                    android:id="@+id/tv_validity"
                    style="@style/AndroidPoint500Medium14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/purchase_validity"
                    android:textColor="@color/grey_400"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_line3" />

                <TextView
                    android:id="@+id/tv_validity_date"
                    style="@style/AndroidPoint500Medium14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="22dp"
                    android:textColor="@color/grey_400"
                    app:layout_constraintBottom_toBottomOf="@id/tv_validity"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_validity"
                    tools:text="366일" />

                <TextView
                    android:id="@+id/tv_caution"
                    style="@style/AndroidBody1Medium14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="31dp"
                    android:text="@string/purchase_caution"
                    android:textColor="@color/grey_400"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_validity" />

                <ImageView
                    android:id="@+id/iv_caution_chevron_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:src="@drawable/icn_chevron_right_l"
                    app:layout_constraintBottom_toBottomOf="@id/tv_caution"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_caution" />

                <TextView
                    android:id="@+id/tv_announcement"
                    style="@style/AndroidBody1Medium14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginBottom="47dp"
                    android:text="@string/purchase_announcement"
                    android:textColor="@color/grey_400"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_caution" />

                <ImageView
                    android:id="@+id/iv_announcement_chevron_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:src="@drawable/icn_chevron_right_l"
                    app:layout_constraintBottom_toBottomOf="@id/tv_announcement"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_announcement" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="19dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_purchase"
                style="@style/AndroidButtonMedium14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/rectangle_lightblue_52dp"
                android:stateListAnimator="@null"
                android:text="@string/purchase_btn_purchase"
                android:textColor="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_gift"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/cl_btn_next" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_gift"
                style="@style/AndroidButtonMedium14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/rectangle_blue_52dp"
                android:stateListAnimator="@null"
                android:text="@string/purchase_btn_gift"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_purchase"
                app:layout_constraintTop_toTopOf="@id/cl_btn_next" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>